# FracSlicer

./: .gitignore  CMakeLists.txt  README.md  devenv.nix  flake.nix
docs/: ARCHITECTURE.md
include/application/: application.h  fractal_gui.h
include/core/: automaton.h  fractal_filters.h  fractal_model.h  geometry_types.h  printer.h
include/encoder/: binary_writer.h  config_parser.h  constants.h  exporter.h  goo_encoder.h  header.h  layer.h  layer_encoder.h  types.h
include/encoder/goo/: binary_writer.h  constants.h  goo_encoder.h  goo_exporter.h  layer_encoder.h
include/io/: fractal_import.h  json_read.h
include/pipelines/: interactive_view.h  pipe_data.h  slicing_pipeline.h
include/renderer/: edge_renderer.h  fractal_renderer.h  renderer.h  scene.h  shader.h  slice_renderer.h  ui_structures.h
include/services/: fractal_generator.h  geometry_converter.h  gpu_rasterizer.h  layer_slicer.h  mesh_assebler.h  polygon_builder.h  rasterization_service.h
res/fractals_json/: 2Objets.json  3D_tetr_sans_sup.json  out.json  test_fear.json  thetrahedronjson.json
res/printers_json/: saturn3_ultra.json  saturn3_ultra_default.json
res/shaders/fractal_renderer/: fragment.glsl  vertex.glsl
res/shaders/slice_renderer/: fragment.glsl  vertex.glsl
src/: app_main.cpp
src/application/: application.cpp  fractal_gui.cpp
src/core/: automaton.cpp  fractal_model.cpp  printer.cpp
src/encoder/: binary_writer.cpp  config_parser.cpp  goo_encoder.cpp  layer_encoder.cpp
src/encoder/goo/: binary_writer.cpp  config_parser.cpp  goo_encoder.cpp  layer_encoder.cpp
src/io/: fractal_import.cpp
src/pipelines/: interactive_view.cpp  slicing_pipeline.cpp
src/renderer/: edge_renderer.cpp  fractal_renderer.cpp  scene.cpp  shader.cpp  slice_renderer.cpp
src/services/: fractal_generator.cpp  geometry_converter.cpp  gpu_rasterizer.cpp  layer_slicer.cpp  mesh_assebler.cpp  polygon_builder.cpp  rasterization_service.cpp
